sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:8: error: '(' expected but identifier found.
      if plusPetit(i+1,i){
         ^AlgCocktailSort2:14: error: illegal start of simple expression
    }
    ^